--- a/frontend/app/templates/login.hbs
+++ b/frontend/app/templates/login.hbs
@@ -6,3 +6,6 @@
   {{input id='password' placeholder='Enter Password' type='password' value=password}}
   <button type="submit">Login</button>
 </form>
+
+<h2>-- OR --</h2>
+<button {{action "providerLogin" "facebook-oauth2"}}>Login With Facebook</button>
