removed backend stuff and replaced with ember_token_auth gem. Added signup functionality

--- a/frontend/app/templates/login.hbs
+++ b/frontend/app/templates/login.hbs
@@ -9,3 +9,6 @@
 
 <h2>-- OR --</h2>
 <button {{action "providerLogin" "facebook-oauth2"}}>Login With Facebook</button>
+
+<h2>-- OR --</h2>
+{{#link-to "signup"}}Signup{{/link-to}}
